# udao-spark-modeling

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
playground/: README.md  run_graph_avg_sk_mlp.py  run_graph_conv_net_sk_mlp.py  run_graph_gat_no_pe_sk_mlp.py  run_graph_gtn_height_encoding_sk_mlp.py  run_graph_gtn_sk_mlp.py  run_graph_qf_sk_mlp.py  run_graph_raal_sk_mlp.py  run_tree_cnn_sk_mlp.py  run_tree_lstm_sk_mlp.py  run_xfer_dataset.py  run_xfer_metric.py
playground/data/: README.md
playground/run_examples/: README  mlp_abalation_perc.sh  mlp_ablation.sh  mlp_xfer_dataset.sh  mlp_xfer_metric.sh
udao_modelling/: .fslckout
udao_modelling/mask/: __init__.py  models.py  utils.py
udao_modelling/models/: __init__.py  _graph_conv.py  _graph_transformer.py  _learning.py  _queryformer.py  _tree_cnn.py  model.py  params.py
udao_modelling/params/: __init__.py  _graph_conv.py  _graph_transformer.py  _queryformer.py  _tree_cnn.py  params.py
udao_modelling/query_embeddings/: extract_query_embeddings.py  extract_tsne_embeddings.py  extract_umap_embeddings.py  get_distance_to_training_points.py  get_umap_models.py  (+1 more)
udao_queries/: CONTRIBUTING.md  README.md  pyproject.toml
udao_queries/params_config/complex_queries/: tpcds.toml  tpcds_dev.toml  tpcds_devstral.toml  tpcds_gemma.toml  tpcds_llama4.toml  tpcds_qwen.toml
udao_queries/params_config/search_params/: job.toml  job_dev.toml  tpcds.toml  tpcds_dev.toml
udao_queries/params_config/snowflake/: tpcds.toml
udao_queries/src/query_generator/: main.py
udao_queries/src/query_generator/data_structures/: foreign_key_graph.py
udao_queries/src/query_generator/database_schemas/: job.py  schemas.py  tpcds.py  tpch.py
udao_queries/src/query_generator/duckdb_connection/: binning.py  setup.py  utils.py
udao_queries/src/query_generator/join_based_query_generator/: snowflake.py
udao_queries/src/query_generator/join_based_query_generator/utils/: query_writer.py  subgraph_generator.py
udao_queries/src/query_generator/llm/: complex_queries.py
udao_queries/src/query_generator/predicate_generator/: predicate_generator.py
udao_queries/src/query_generator/tools/: cherry_pick_binning.py  format_queries_file_structure.py  histograms.py  union_queries.py
udao_queries/src/query_generator/utils/: definitions.py  exceptions.py  params.py  show_messages.py  utils.py
udao_queries/tests/: utils.py
udao_queries/tests/duckdb/: test_binning.py  test_duckdb_setup.py  test_duckdb_utils.py
udao_queries/tests/file_management/: test_read_histograms.py
udao_queries/tests/llm/: test_parsing.py
udao_queries/tests/query_generation/: test_make_queries.py
udao_spark/: xter.py
udao_trace/: __init__.py
(+138 files in other folders)
